# dockmaster

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.cursor/rules/: developer.mdc  test.mdc
configs/: modern-train.yaml
docker_manager/: __init__.py  __main__.py  cli.py  utils.py
docker_manager/managers/: __init__.py  config_manager.py  image_manager.py
dockmaster/: __init__.py  __main__.py  cli.py  cli_utils.py  constants.py  interactive.py  interactive_utils.py  time_utils.py  utils.py
dockmaster/commands/: __init__.py  schedule.py
dockmaster/formatters/: status.py
dockmaster/managers/: __init__.py  base_manager.py  config_manager.py  container_manager.py  container_monitor.py  image_manager.py  project_manager.py  scheduler_daemon.py  scheduler_manager.py
dockmaster/managers/image/: __init__.py  base.py  build.py  cleanup.py  push.py  summary.py  tag.py  utils.py
docs/: development.md
