[metadata]
name = dockmaster
version = 0.2.1
description = Docker项目管理工具
long_description = file: README.md
long_description_content_type = text/markdown
author = Kang Chen
author_email = chenkangcs@foxmail.com
url = https://github.com/queekye/dockmaster
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    docker>=6.0.0
    typer>=0.9.0
    loguru>=0.7.0
    schedule>=1.2.0
    questionary>=2.0.0

[options.entry_points]
console_scripts =
    dockmaster = dockmaster.cli:app

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203,W503
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[mypy.plugins.django.*]
init_typed = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = --verbose --cov=dockmaster --cov-report=term-missing

[coverage:run]
source = dockmaster
omit =
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError 